--- a/templates/index.html
+++ b/templates/index.html
@@ -1,90 +1,65 @@
 {% extends "base.html" %}
 
-{% block title %}Welcome{% endblock %}
+{% block title %}Home | Provoice{% endblock %}
 
 {% block page_content %}
 
 {% if user.is_authenticated %}
-<main class="flex flex-col items-center">
-    <div class="py-4 text-center">
-        <h2 class="text-xl tracking-wide">Welcome, {{ user.first_name }}&nbsp;{{ user.last_name }}!</h2>
-        <p class="text-sm tracking-wide">Where would you like to begin?</p>
+<main class="flex flex-col items-center w-full px-2 mb-8">
+    <div class="pt-10 pb-2 space-y-2 text-center">
+        <h2 class="text-2xl tracking-wide">Welcome, {{ user.first_name }}&nbsp;{{ user.last_name }}!</h2>
+        <p class="text-md tracking-wide">Where would you like to begin?</p>
     </div>
 
-    <div class="grid grid-cols-2 my-10">
-        <div class="text-2xl flex justify-center items-center p-4 bg-blue-200 m-6 md:w-56 md:h-36 lg:w-72 border border-gray-800
+    <div class="flex flex-wrap">
+        <div class="text-2xl flex justify-center items-center p-4 bg-blue-200 my-6 w-full border border-gray-800
        rounded-md shadow-md shadow-gray-700 hover:bg-opacity-60 hover:cursor-pointer">
-            <a href="#" class="text-center">create client</a>
+            <a href="#" class="w-full text-center">add a client</a>
         </div>
-        <div class="text-2xl flex justify-center items-center p-4 bg-red-200 m-6 md:w-56 md:h-36 lg:w-72 border border-gray-800
-        rounded-md shadow-md shadow-gray-700 hover:bg-opacity-60 hover:cursor-pointer">
-            <a href="#" class="text-center">view clients</a>
-        </div>
-        <div class="text-2xl flex justify-center items-center p-4 bg-green-200 m-6 md:w-56 md:h-36 lg:w-72 border border-gray-800
+        <div class="text-2xl flex justify-center items-center p-4 bg-green-200 my-6 w-full border border-gray-800
        rounded-md shadow-md shadow-gray-700 hover:bg-opacity-60 hover:cursor-pointer">
-            <a href="#" class="text-center">find a client</a>
+            <a href="#" class="w-full text-center">find a client</a>
         </div>
-        <div class="text-2xl flex justify-center items-center p-4 bg-orange-200 m-6 md:w-56 md:h-36 lg:w-72 border border-gray-800
+        <div class="text-2xl flex justify-center items-center p-4 bg-red-200 my-6 w-full border border-gray-800
         rounded-md shadow-md shadow-gray-700 hover:bg-opacity-60 hover:cursor-pointer">
-            <a href="#" class="text-center">create invoice</a>
+            <a href="#" class="w-full text-center">view all clients</a>
+        </div>
+        <div class="text-2xl flex justify-center items-center p-4 bg-orange-200 my-6 w-full border border-gray-800
+        rounded-md shadow-md shadow-gray-700 hover:bg-opacity-60 hover:cursor-pointer">
+            <a href="#" class="w-full text-center">create an invoice</a>
+        </div>
+        <div class="text-2xl flex justify-center items-center p-4 bg-purple-200 my-6 w-full border border-gray-800
+        rounded-md shadow-md shadow-gray-700 hover:bg-opacity-60 hover:cursor-pointer">
+            <a href="#" class="w-full text-center">find an invoice</a>
         </div>
     </div>
-    <div class="border border-gray-700 rounded shadow-md shadow-gray-700 hover:bg-opacity-60 hover:cursor-pointer m-6 md:w-56">
-        <a href="#">search for an invoice</a>
-    </div>
+
 </main>
-
-
-<!--<nav class="flex flex-col items-center">-->
-
-<!--    <div class="w-50 grid grid-cols-2 gap-4 my-8 mx-auto">-->
-<!--        <div class="text-2xl flex justify-center items-center p-4 bg-blue-200 m-6 md:w-56 md:h-36 lg:w-72 border border-gray-800-->
-<!--        rounded-md shadow-md shadow-gray-700 hover:bg-opacity-60 hover:cursor-pointer">-->
-<!--            <a href="#">create client</a>-->
-<!--        </div>-->
-<!--        <div class="text-2xl flex justify-center items-center p-4 bg-red-200 m-6 md:w-56 md:h-36 lg:w-72 border border-gray-800-->
-<!--        rounded-md shadow-md shadow-gray-700 hover:bg-opacity-60 hover:cursor-pointer">-->
-<!--            <a href="#">view clients</a>-->
-<!--        </div>-->
-<!--        <div class="text-2xl flex justify-center items-center p-4 bg-green-200 m-6 md:w-56 md:h-36 lg:w-72 border border-gray-800-->
-<!--        rounded-md shadow-md shadow-gray-700 hover:bg-opacity-60 hover:cursor-pointer">-->
-<!--            <a href="#">find a client</a>-->
-<!--        </div>-->
-<!--        <div class="text-2xl flex justify-center items-center p-4 bg-orange-200 m-6 md:w-56 md:h-36 lg:w-72 border border-gray-800-->
-<!--        rounded-md shadow-md shadow-gray-700 hover:bg-opacity-60 hover:cursor-pointer">-->
-<!--            <a href="#">create invoice</a>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div class="text-2xl flex justify-center items-center w-[21.4em] lg:w-[26.6em] p-4 bg-teal-200 mx-auto h-20 8 border border-gray-800-->
-<!--    rounded-md shadow-md shadow-gray-700 hover:bg-opacity-60 hover:cursor-pointer">-->
-<!--        <a href="#">search for an invoice</a>-->
-<!--    </div>-->
-<!--</nav>-->
-<!--{% else %}-->
-<!--<main class="w-3/4 flex flex-col mx-auto h-1/2 justify-center">-->
-<!--    <h1 class="text-5xl 2xl:text-[2.7em] w-4/5 pb-3 mx-auto text-center">let's get you logged in.</h1>-->
-<!--    <p class="text-center font-light tracking-wide">account not activated yet?<a href="#"-->
-<!--                                                                                 class="text-blue-600 hover:underline hover:text-blue-800">&nbsp;click-->
-<!--        here.</a></p>-->
-<!--    <br/><br/>-->
-<!--    <form method="POST" action="{% url 'home' %}" class="w-full md:w-3/4 xl:w-1/2 2xl:w-1/3 mx-auto space-y-6">-->
-<!--        {% csrf_token %}-->
-<!--        <div class="border-b border-gray-500">-->
-<!--            <input class="w-full h-8 px-2 py-1 text-lg tracking-wide" type="email" name="email"-->
-<!--                   placeholder="email address" required>-->
-<!--        </div>-->
-<!--        <br/>-->
-<!--        <div class="border-b border-gray-500">-->
-<!--            <input class="w-full h-8 px-2 py-1 text-lg tracking-wide" type="password" name="password"-->
-<!--                   placeholder="*************" required>-->
-<!--        </div>-->
-<!--        <div class="w-full relative">-->
-<!--            <button type="submit"-->
-<!--                    class="h-8 absolute right-0 top-0 text-2xl font-light my-4 px-2 text-black hover:text-blue-500">-->
-<!--                login-->
-<!--            </button>-->
-<!--        </div>-->
-<!--    </form>-->
-<!--    {% endif %}-->
-<!--</main>-->
+{% else %}
+<main class="w-3/4 flex flex-col mx-auto h-1/2 justify-center">
+    <h1 class="text-5xl 2xl:text-[2.7em] w-4/5 pb-3 mx-auto text-center">let's get you logged in.</h1>
+    <p class="text-center font-light tracking-wide">account not activated yet?<a href="#"
+                                                                                 class="text-blue-600 hover:underline hover:text-blue-800">&nbsp;click
+        here.</a></p>
+    <br/><br/>
+    <form method="POST" action="{% url 'home' %}" class="w-full md:w-3/4 xl:w-1/2 2xl:w-1/3 mx-auto space-y-6">
+        {% csrf_token %}
+        <div class="border-b border-gray-500">
+            <input class="w-full h-8 px-2 py-1 text-lg tracking-wide" type="email" name="email"
+                   placeholder="email address" required>
+        </div>
+        <br/>
+        <div class="border-b border-gray-500">
+            <input class="w-full h-8 px-2 py-1 text-lg tracking-wide" type="password" name="password"
+                   placeholder="*************" required>
+        </div>
+        <div class="w-full relative">
+            <button type="submit"
+                    class="h-8 absolute right-0 top-0 text-2xl font-light my-4 px-2 text-black hover:text-blue-500">
+                login
+            </button>
+        </div>
+    </form>
+</main>
+{% endif %}
 {% endblock %}
