--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 
 {% block page_content %}
 <main class="w-3/4 flex flex-col mx-auto h-1/2 justify-center">
-    <h1 class="text-5xl 2xl:text-[2.8em] w-4/5 pb-3 mx-auto text-center">activate your account.</h1>
+    <h1 class="text-5xl 2xl:text-[2.8em] w-4/5 pb-3 pt-14 mx-auto text-center">activate your account.</h1>
     <br/>
     <form method="POST" action="" class="relative w-full md:w-3/4 xl:w-1/2 2xl:w-1/3 mx-auto space-y-6">
         {% csrf_token %}
